[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pyegainbox"
author = "Hugo Jiménez Hernández"
author-email = "hjimenezhdez@gmail.com"
home-page = "https://github.com/HugoJH/pyEGAInbox"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

